# facedetection_ncnn

./: README.md  facedetection.sln
facedetection/: facedetection.vcxproj  facedetection.vcxproj.filters
facedetection/include/: layer_type_enum.h
facedetection/lib/: ncnn.lib
facedetection/src/: face_struct.h  main.cpp  mtcnn.cpp  mtcnn.h  vanface.cpp  vanface.h
facedetection_android/: settings.gradle
facedetection_android/app/: CMakeLists.txt  build.gradle
facedetection_android/app/src/main/: AndroidManifest.xml
facedetection_android/facedetectionlib/: CMakeLists.txt  build.gradle
facedetection_android/facedetectionlib/src/androidTest/java/com/danpe/facedetectionlib/: ExampleInstrumentedTest.java
facedetection_android/facedetectionlib/src/main/: AndroidManifest.xml
facedetection_android/facedetectionlib/src/main/cpp/: FDJniManage.h  JniFaceDetection.cpp  JniFaceDetection.h
facedetection_android/facedetectionlib/src/main/cpp/facedetection/: detect_picture.cpp  mtcnn.cpp  vanface.cpp
facedetection_android/facedetectionlib/src/main/java/com/danpe/facedetectionlib/: FaceDetection.java
facedetection_android/facedetectionlib/src/main/res/values/: strings.xml
facedetection_android/facedetectionlib/src/test/java/com/danpe/facedetectionlib/: ExampleUnitTest.java
facedetection_android/gradle/wrapper/: gradle-wrapper.properties
transfer_model/: mtcnn_hw.py  to_ncnn_model.bat
transfer_model/caffe_bin/: README.md
transfer_model/caffe_models/: det2.prototxt  det3.prototxt
transfer_model/caffe_models_upgrade/: det1.prototxt  landmark_deploy.prototxt
(+17 files in other folders)
